Modify shippable yaml, create directories

--- a/shippable.yml
+++ b/shippable.yml
@@ -21,6 +21,8 @@ before_script:
 #  - curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
 #  - sudo chown -R $USER:$USER ~/.composer
 #  - composer self-update -n
+  - mkdir -p shippable/codecoverage
+  - mkdir -p shippable/testresults
   - composer install
 
 script:
