--- a/shippable.yml
+++ b/shippable.yml
@@ -26,7 +26,7 @@ before_script:
   - composer install
 
 script:
-  - phpunit --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage tests/ExampleTest.php
+  - phpunit --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage ./tests/ExampleTest.php
 
 after_script:
 
