--- a/shippable.yml
+++ b/shippable.yml
@@ -21,9 +21,11 @@ before_script:
 #  - curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
 #  - sudo chown -R $USER:$USER ~/.composer
 #  - composer self-update -n
-  - mkdir -p shippable/codecoverage
-  - mkdir -p shippable/testresults
+  #- mkdir -p shippable/codecoverage
+  #- mkdir -p shippable/testresults
   - composer install
+  - echo "==========================="
+  - pwd
 
 script:
   - phpunit --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage ./tests/ExampleTest.php
