--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,9 @@
 language: php
 
 php:
-  - 7.2
+  - 7.2 #.15
+
+archive: true
 
 branches:
   only:
@@ -14,21 +16,24 @@ services:
 
 before_script:
   - sudo apt-get update
-  - sudo apt-get install nginx
-  - sudo cp ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf.default ~/.phpenv/versions/$(phpenv version-name)/etc/php-fpm.conf
-  - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
-  - sudo cp -f shippable-conf/site-nginx.conf /etc/nginx/sites-enabled/site-nginx.conf
-  - sudo sed -e "s?%BUILD_DIR%?$(pwd)?g" --in-place /etc/nginx/sites-enabled/site-nginx.conf
-  - sudo service nginx start
-  - sudo php shippable-conf/composer-setup.php --install-dir=bin --filename=composer
-  - sudo mv shippable-conf/composer.phar /usr/local/bin/composer
+#  - sudo php shippable-conf/composer-setup.php --install-dir=bin --filename=composer
+#  - sudo mv shippable-conf/composer.phar /usr/local/bin/composer
+#  - curl -sS https://getcomposer.org/installer | sudo php -- --install-dir=/usr/local/bin --filename=composer
+#  - sudo chown -R $USER:$USER ~/.composer
+#  - composer self-update -n
+  - mkdir -p ./shippable/codecoverage
+  - mkdir -p ./shippable/testresults
   - composer install
+  - echo "==========================="
+  - pwd
+  - ls -la
+  - ls -la ./test
+
 
 script:
-  - phpunit --log-junit shippable/testresults/junit.xml --coverage-xml shippable/codecoverage tests/ExampleTest.php
+  - phpunit --log-junit ./shippable/testresults/junit.xml --coverage-xml ./shippable/codecoverage ./test/ExampleTest.php
 
 after_script:
-  - sudo service nginx stop
 
 ## Optional: select the node pool or node pools you want to run this job on,if different from default
 #runtime:
