--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     restart: always
-    envorinment:
+    environment:
       MYSQL_ROOT_PASSWORD: d
       MYSQL_DATABASE: d
       MYSQL_USER: d
